--- a/index.html
+++ b/index.html
@@ -124,17 +124,15 @@
                                             <a class="active" href="#">Home</a>
                                             <ul class="sub-menu">
                                                 <li><a class="active" href="index.html">Home style 1</a></li>
-                                                <li><a href="index-2.html">Home style 2</a></li>
-                                                <li><a href="index-3.html">Home style 3</a></li>
                                             </ul>
                                         </li>
-                                        <li><a href="about.html">About</a></li>
+                                        <li><a href="about/">About</a></li>
                                         <li class="menu-item-has-children">
                                             <a href="#">Services</a>
                                             <ul class="sub-menu">
-                                                <li><a href="service.html">Service</a></li>
-                                                <li><a href="service-s2.html">Service style 2</a></li>
-                                                <li><a href="service-single.html">Service Single</a></li>
+                                                <li><a href="service/">Service</a></li>
+                                                <li><a href="#">Service style 2</a></li>
+                                                <li><a href="#">Service Single</a></li>
                                             </ul>
                                         </li>
 
