--- a/index.html
+++ b/index.html
@@ -1,15 +1,13 @@
 
 <!DOCTYPE html>
-<html lang="en">
-
-
+<html lang="es-Mx">
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-   <meta name="author" content="">
+    <meta name="author" content="GRUPO EVEREST">
     <link rel="shortcut icon" type="image/png" href="assets/images/favicon.png">
- <title>koncrete | Construction & Building Template</title>
+    <title>koncrete | Construction & Building Template</title>
     <link href="assets/css/font-awesome.min.css" rel="stylesheet">
     <link href="assets/css/themify-icons.css" rel="stylesheet">
     <link href="assets/css/flaticon.css" rel="stylesheet">
@@ -31,7 +29,7 @@
     <!-- start page-wrapper -->
     <div class="page-wrapper">
         <!-- start preloader -->
-        <div class="preloader">
+        <!-- <div class="preloader">
             <div class="vertical-centered-box">
                 <div class="content">
                     <div class="loader-circle"></div>
@@ -41,7 +39,7 @@
                     <img src="assets/images/preloader.png" alt="">
                 </div>
             </div>
-        </div>
+        </div> -->
         <!-- end preloader -->
         <!-- Start header -->
         <header id="header">
@@ -59,7 +57,7 @@
                             <div class="contact-info">
                                 <ul>
                                     <li><a href="tel:+6494461709"><i><img src="assets/images/icon/2.png" alt=""></i> +00 56 98 46</a></li>
-                                    <li class="lan-sec">
+                                    <!-- <li class="lan-sec">
                                         <div class="lang-menu">
                                             <button class="flag-button">
                                                 <span class="flag-img">
@@ -89,7 +87,7 @@
 
                                             </ul>
                                         </div>
-                                    </li>
+                                    </li> -->
                                 </ul>
                             </div>
                         </div>
@@ -112,7 +110,7 @@
                             </div>
                             <div class="col-lg-3 col-md-6 col-6">
                                 <div class="navbar-header">
-                                    <a class="navbar-brand" href="index.html"><img src="assets/images/logo.png"
+                                    <a class="navbar-brand" href="#"><img src="assets/images/logo.png"
                                             alt=""></a>
                                 </div>
                             </div>
@@ -122,59 +120,33 @@
                                     <ul class="nav navbar-nav mb-2 mb-lg-0">
                                         <li class="menu-item-has-children">
                                             <a class="active" href="#">Home</a>
-                                            <ul class="sub-menu">
-                                                <li><a class="active" href="index.html">Home style 1</a></li>
-                                            </ul>
                                         </li>
-                                        <li><a href="about/">About</a></li>
                                         <li class="menu-item-has-children">
-                                            <a href="#">Services</a>
+                                            <a href="#">Rollos</a>
                                             <ul class="sub-menu">
-                                                <li><a href="service/">Service</a></li>
-                                                <li><a href="#">Service style 2</a></li>
-                                                <li><a href="#">Service Single</a></li>
-                                            </ul>
-                                        </li>
-
-                                        <li class="menu-item-has-children">
-                                            <a href="#">pages</a>
-                                            <ul class="sub-menu">
-                                                <li><a href="project.html">Project</a></li>
-                                                <li><a href="project-single.html">Project Single</a></li>
-                                                <li><a href="appointment.html">Appointment</a></li>
-                                                <li><a href="terms.html">Terms & Conditions</a></li>
-                                                <li><a href="testimonial.html">Testimonial</a></li>
-                                                <li><a href="pricing.html">Pricing</a></li>
-                                                <li><a href="404.html">Error 404</a></li>
+                                                <li><a href="sbr/">Sbr</a></li>
                                             </ul>
                                         </li>
                                         <li class="menu-item-has-children">
-                                            <a href="blog.html">Blog</a>
+                                            <a href="#">Productos</a>
                                             <ul class="sub-menu">
-                                                <li><a href="blog.html">Blog right sidebar</a></li>
-                                                <li><a href="blog-left-sidebar.html">Blog left sidebar</a></li>
-                                                <li><a href="blog-fullwidth.html">Blog fullwidth</a></li>
-                                                <li class="menu-item-has-children">
-                                                    <a href="#">Blog details</a>
-                                                    <ul class="sub-menu">
-                                                        <li><a href="blog-single.html">Blog details right sidebar</a>
-                                                        </li>
-                                                        <li><a href="blog-single-left-sidebar.html">Blog details left
-                                                                sidebar</a></li>
-                                                        <li><a href="blog-single-fullwidth.html">Blog details
-                                                                fullwidth</a></li>
-                                                    </ul>
-                                                </li>
+                                                <li><a href="piso-para-gimnasio/">Piso para gimnasio</a></li>
                                             </ul>
                                         </li>
-                                        <li><a href="contact.html">Contact</a></li>
+                                        <!-- <li class="menu-item-has-children">
+                                            <a href="#">Moldeado</a>
+                                        </li> -->
+                                        <li class="menu-item-has-children">
+                                            <a href="blog/">Blog</a>
+                                        </li>
+                                        <li><a href="contacto/">Contacto</a></li>
                                     </ul>
 
                                 </div><!-- end of nav-collapse -->
                             </div>
                             <div class="col col-lg-3 col-md-2 col-2">
                                 <div class="header-right">
-                                    <div class="header-search-form-wrapper">
+                                    <!-- <div class="header-search-form-wrapper">
                                         <div class="cart-search-contact">
                                             <button class="search-toggle-btn"><i
                                                     class="fi flaticon-magnifiying-glass"></i></button>
@@ -189,9 +161,9 @@
                                                 </form>
                                             </div>
                                         </div>
-                                    </div>
+                                    </div> -->
                                     <div class="close-form">
-                                        <a class="theme-btn" href="contact.html">GET FREE QUOTE</a>
+                                        <a class="theme-btn" href="contacto/">COTIZAR</a>
                                     </div>
                                 </div>
                             </div>
@@ -217,9 +189,9 @@
                                         <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form.</p>
                                     </div>
                                     <div class="clearfix"></div>
-                                    <div data-swiper-parallax="500" class="slide-btns">
+                                    <!-- <div data-swiper-parallax="500" class="slide-btns">
                                         <a href="appointment.html" class="btn theme-btn">BOOK ONLINE</a>
-                                    </div>
+                                    </div> -->
                                 </div>
                             </div>
                         </div> <!-- end slide-inner -->
@@ -237,9 +209,29 @@
                                         <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form.</p>
                                     </div>
                                     <div class="clearfix"></div>
-                                    <div data-swiper-parallax="500" class="slide-btns">
+                                    <!-- <div data-swiper-parallax="500" class="slide-btns">
                                         <a href="appointment.html" class="btn theme-btn">BOOK ONLINE</a>
+                                    </div> -->
+                                </div>
+                            </div>
+                        </div> <!-- end slide-inner -->
+                    </div> <!-- end swiper-slide -->
+
+                    <div class="swiper-slide">
+                        <div class="slide-inner slide-bg-image" data-background="assets/images/slider/slide-1.jpg">
+                            <div class="gradient-overlay"></div>
+                            <div class="container">
+                                <div class="slide-content">
+                                    <div data-swiper-parallax="300" class="slide-title">
+                                        <h2>Best Construction Services And Affordable Prices!</h2>
                                     </div>
+                                    <div data-swiper-parallax="400" class="slide-text">
+                                        <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form.</p>
+                                    </div>
+                                    <div class="clearfix"></div>
+                                    <!-- <div data-swiper-parallax="500" class="slide-btns">
+                                        <a href="appointment.html" class="btn theme-btn">BOOK ONLINE</a>
+                                    </div> -->
                                 </div>
                             </div>
                         </div> <!-- end slide-inner -->
