probando git en otra pc

--- a/index.html
+++ b/index.html
@@ -23,9 +23,8 @@
     <link href="assets/css/odometer-theme-default.css" rel="stylesheet">
     <link href="assets/css/style.css" rel="stylesheet">
 </head>
-
 <body>
-
+<!-- PROBANDO GIT -->
     <!-- start page-wrapper -->
     <div class="page-wrapper">
         <!-- start preloader -->
